native/wdsp/wdsp.h

extern void SetRXAAMSQThreshold (int channel, double threshold);
extern void SetRXAAMSQMaxTail (int channel, double tail);
extern void ResetPixelBuffers(int disp);
extern void SetAnalyzer ( int disp,
                          int n_pixout,
                          int n_fft,
                          int typ,
                          int *flp,
                          int sz,
                          int bf_sz,
                          int win_type,
                          double pi,
                          int ovrlp,
                          int clp,
                          double fscLin,
                          double fscHin,
                          int n_pix,
                          int n_stch,
                          int calset,
                          double fmin,
                          double fmax,
                          int max_w
                        );
extern void XCreateAnalyzer(  int disp,
                              int *success,
                              int m_size,
                              int m_num_fft,
                              int m_stitch,
                              char *app_data_path
                           );
extern void DestroyAnalyzer(int disp);
extern void GetPixels ( int disp,
                        int pixout,
                        dOUTREAL *pix,
                        int *flag
                      );
extern void SetCalibration (  int disp,
                              int set_num,
                              int n_points,
                              double (*cal)[dMAX_M + 1]
                           );
extern void Spectrum0(int run, int disp, int ss, int LO, double* pbuff);
extern void SetDisplayDetectorMode (int disp, int pixout, int mode);
extern void SetDisplayAverageMode (int disp, int pixout, int mode);
extern void SetDisplayNumAverage (int disp, int pixout, int num);
extern void SetDisplayAvBackmult (int disp, int pixout, double mult);
extern void SetDisplaySampleRate (int disp, int rate);
extern void SetDisplayNormOneHz (int disp, int pixout, int norm);
//
// Interfaces from anf.c
//

extern void SetRXAANFRun (int channel, int run);
extern void SetRXAANFVals (int channel, int taps, int delay, double gain, double leakage);
extern void SetRXAANFPosition (int channel, int position);
//
// Interfaces from anr.c
//

extern void SetRXAANRRun (int channel, int run);
extern void SetRXAANRVals (int channel, int taps, int delay, double gain, double leakage);
extern void SetRXAANRPosition (int channel, int position);
//
// Interfaces from dexp.c
//

extern void create_dexp (int id, int run_dexp, int size, double* in, double* out, int rate, double dettau,
                         double tattack, double tdecay,
                         double thold, double exp_ratio, double hyst_ratio, double attack_thresh, int nc, int wtype, double lowcut,
                         double highcut,
                         int run_filt, int run_vox, int run_audelay, double audelay, void (__stdcall *pushvox)(int id, int active),
                         int antivox_run, int antivox_size, int antivox_rate, double antivox_gain, double antivox_tau);
extern void SendCBPushDexpVox (int id, void (__stdcall *pushvox)(int id, int active));
//
// Interfaces from emnr.c
//

extern void SetRXAEMNRpost2Run(int channel, int run);
extern void SetRXAEMNRpost2Factor(int channel, double factor);
extern void SetRXAEMNRpost2Nlevel(int channel, double nlevel);
extern void SetRXAEMNRpost2Taper(int channel, int taper);
extern void SetRXAEMNRpost2Rate(int channel, double tc);
extern void SetRXAEMNRRun (int channel, int run);
extern void SetRXAEMNRgainMethod (int channel, int method);
extern void SetRXAEMNRnpeMethod (int channel, int method);
extern void SetRXAEMNRaeRun (int channel, int run);
extern void SetRXAEMNRPosition (int channel, int position);
extern void SetRXAEMNRaeZetaThresh (int channel, double zetathresh);
extern void SetRXAEMNRaePsi (int channel, double psi);
extern void SetRXAEMNRtrainZetaThresh(int channel, double thresh);
extern void SetRXAEMNRtrainT2(int channel, double t2);
//
// Interfaces from fmsq.c
//

extern void SetRXAFMSQRun (int channel, int run);
extern void SetRXAFMSQThreshold (int channel, double threshold);
//
// Interfaces from iobuffs.c
//

extern void fexchange0 (int channel, double* in, double* out, int* error);
//
// Interfaces from rnnr.c
//

extern void SetRXARNNRRun (int channel, int run);
extern int RNNRloadModel(const char* file_path);
//
// Interfaces from sbnr.c
//

extern void SetRXASBNRRun (int channel, int run);
extern void SetRXASBNRreductionAmount (int channel, float amount);
extern void SetRXASBNRsmoothingFactor (int channel, float factor);
extern void SetRXASBNRwhiteningFactor (int channel, float factor);
extern void SetRXASBNRnoiseRescale (int channel, float factor);
extern void SetRXASBNRpostFilterThreshold (int channel, float threshold);
extern void SetRXASBNRnoiseScalingType(int channel, int noise_scaling_type);
extern void SetRXASBNRPosition(int channel, int position);
extern void TXAGetaSipF1 (int channel, float* out, int size);