Zeus.Dsp/Wdsp/NativeMethods.cs


    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAAMSQThreshold(int channel, double threshold);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAAMSQMaxTail(int channel, double tail);

    // FM — fmsq.h. Threshold ~0..1.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAFMSQRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAFMSQThreshold(int channel, double threshold);

    [LibraryImport(LibraryName, StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void XCreateAnalyzer(
        int disp,
        out int success,
        int m_size,
        int m_LO,
        int m_stitch,
        string? app_data_path);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void DestroyAnalyzer(int disp);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void ResetPixelBuffers(int disp);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetAnalyzer(
        int disp,
        int n_pixout,
        int n_fft,
        int typ,
        ref int flp,
        int sz,
        int bf_sz,
        int win_type,
        double pi_alpha,
        int ovrlp,
        int clp,
        double fscLin,
        double fscHin,
        int n_pix,
        int n_stch,
        int calset,
        double fmin,
        double fmax,
        int max_w);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void Spectrum0(int run, int disp, int ss, int LO, ref double pbuff);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetDisplayDetectorMode(int disp, int pixout, int mode);

    // Pull complex IQ samples from TXA's siphon ring. The siphon sits at
    // xsiphon's position in xtxa, which is BEFORE iqc (PureSignal correction)
    // and BEFORE cfir/rsmpout. Default run=1, mode=0, sipsize=16384 (set
    // inside libwdsp's create_txa). Output buffer is 2*size floats interleaved
    // I,Q,I,Q. This lets the panadapter render the operator's pre-distortion
    // voice spectrum so the trace looks "clean" while PS is converging — the
    // same approach Thetis uses (cmaster.cs:544-545 + siphon.c:268).
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void TXAGetaSipF1(int channel, ref float pout, int size);

    // Averaging trio. Mode 3 = log-recursive (EMA in dB space) — the Thetis
    // default. Backmult is the per-frame retention factor (0 = no smoothing,
    // 1 = frozen). NumAverage matters for modes 2/4; we're on mode 3 so it
    // just caps the analyzer's internal ring buffer.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetDisplayAverageMode(int disp, int pixout, int mode);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetDisplayNumAverage(int disp, int pixout, int num);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetDisplayAvBackmult(int disp, int pixout, double mult);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetDisplaySampleRate(int disp, int rate);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetDisplayNormOneHz(int disp, int pixout, int norm);

    // GetPixels has no pixel_ref out-parameter — doc 03 predicted a 5th
    // argument but the shipped ABI is 4-parameter. Writes float[num_pixels] in place.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void GetPixels(int disp, int pixout, ref float pix, out int flag);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void fexchange0(
        int channel,
        ref double inInterleavedIq,
        ref double outInterleavedAudio,
        out int error);

    // Noise reduction (post-RXA surface — mirrors the exact subset Thetis exposes).

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAANRRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAANRVals(int channel, int taps, int delay, double gain, double leakage);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAANRPosition(int channel, int position);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAANFRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAANFVals(int channel, int taps, int delay, double gain, double leakage);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAANFPosition(int channel, int position);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRPosition(int channel, int position);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRgainMethod(int channel, int method);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRnpeMethod(int channel, int method);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRaeRun(int channel, int run);

    // Auto-enhancement tuning. emnr.c:1415,1422 — both take double. Not exposed
    // in Thetis UI; defaults inside create_emnr() apply unless overridden.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRaeZetaThresh(int channel, double zetathresh);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRaePsi(int channel, double psi);

    // EMNR post-processing (post2). Comfort-noise injection that masks
    // residual EMNR artifacts — the psychoacoustic mechanism behind Thetis's
    // smoother-sounding NR2 hiss. emnr.c:1026,1033,1040,1047,1056. Run/Taper
    // are int; Factor/Nlevel/Rate are double.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRpost2Run(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRpost2Factor(int channel, double factor);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRpost2Nlevel(int channel, double nlevel);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRpost2Taper(int channel, int taper);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRpost2Rate(int channel, double tc);

    // EMNR Trained gain-method tuning. emnr.c:1429,1436. T1 is the dB threshold
    // against the trained zetaHat lookup table; T2 is a secondary suppression
    // threshold. Only consulted by WDSP when SetRXAEMNRgainMethod=3 (Trained),
    // but writing them is harmless either way.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRtrainZetaThresh(int channel, double thresh);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAEMNRtrainT2(int channel, double t2);

    // SBNR (NR4) — libspecbleach spectral-bleaching NR. Symbols defined in
    // native/wdsp/sbnr.c with the float / int signatures shown here.
    // IMPORTANT: requires libwdsp rebuild — Phase 1 of issue #79; the
    // bundled binaries shipped today do NOT export these symbols, so any
    // call here will fail with EntryPointNotFoundException at runtime.
    // The engine guards SBNR-on against the missing library; tests that
    // try to actually flip Sbnr Run=1 are [Skip]'d until Phase 1 lands.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASBNRRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASBNRPosition(int channel, int position);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASBNRreductionAmount(int channel, float amount);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASBNRsmoothingFactor(int channel, float factor);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASBNRwhiteningFactor(int channel, float factor);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASBNRnoiseRescale(int channel, float factor);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASBNRpostFilterThreshold(int channel, float threshold);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASBNRnoiseScalingType(int channel, int noise_scaling_type);

    // RNNR (NR3) — RNNoise recurrent-network denoiser. Symbols defined in
    // native/wdsp/rnnr.c, gated by WDSP_WITH_NR3 (OFF until xiph/rnnoise is
    // vendored — see native/rnnoise/VENDORING.md). Builds without NR3 compile
    // stubs/nr3/rnnr_stub.c, which does NOT export these symbols, so calls here
    // fail with EntryPointNotFoundException; the engine guards on
    // Nr3RnnrAvailable before invoking. RNNRloadModel is process-global (loads
    // the model used by every RNNR channel); the path is the operator-installed
    // RNNoise weights file. A NULL/empty path reverts to the baked-in model —
    // but Zeus builds rnnoise WITHOUT a default model, so NR3 stays inert until
    // a model is loaded.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXARNNRRun(int channel, int run);
